# core-level-spec-tools

./: README.md  autoscript.py  castep_get_XPS_energies.py  core_excitation.py  execute_molpdos.sh  force_basis_get_XPS_energies.py  lischner_get_XPS_energies.py  nexafs.py  plot.py  plot_mo.py  plot_nexafs.py  plot_xps.py  pyproject.toml  v2_plot_nexafs.py
CASTEP/: autoscript.py  castep_get_XPS_energies.py  core_excitation.py  execute_molpdos.sh  force_basis_get_XPS_energies.py  lischner_get_XPS_energies.py  plot_mo.py  plot_nexafs.py  plot_xps.py
aims/: force_basis_get_XPS_energies.py  lischner_get_XPS_energies.py
castep/: castep_get_XPS_energies.py  core_excitation.py  execute_molpdos.py  execute_molpdos.sh  nexafs.py  plot.py  plot_mo.py  plot_xps.py
